--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,1 +1,8 @@
 @import 'base/variables';
+.container {
+    max-width: 950px;
+    margin: 0 auto;
+}
+@import 'blocks/promo';
+@import 'blocks/header.scss';
+@import 'blocks/buttons';
