--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,10 +9,19 @@
     text-transform: uppercase;
     text-align: center;
     color: #FFFFFF;
+    outline: none;
+    &:focus {
+        outline: none;
+    }
     &_main {
         margin-top: 76px;
         width: 300px;
         height: 50px;
+        font-size: 16px;
+    }
+    &_submit {
+        width: 100%;
+        height: 55px;
         font-size: 16px;
     }
 }
