add section carousel, add mobile adaptation carousel

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -80,4 +80,19 @@
             width: 280px;
         }
     }
+    .carousel {
+        padding: 41px 0;
+        &__inner {
+            width: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    .container {
+        width: 90%;
+    }
 }
