--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -83,9 +83,9 @@
     .carousel {
         padding: 41px 0;
         &__inner {
-            width: 100%;
+            width: 90%;
             img {
-                width: 100%;
+                width:  100%;
                 height: 100%;
             }
         }
@@ -94,5 +94,14 @@
 @media (max-width: 768px) {
     .container {
         width: 90%;
+    }
+    .carousel {
+        &__inner {
+            width: 100%;
+            img {
+                width:  100%;
+                height: 100%;
+            }
+        }
     }
 }
