--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -10,23 +10,40 @@
     text-align: center;
     color: #FFFFFF;
     outline: none;
+    transition: 0.5s all;
     &:focus {
         outline: none;
+    }
+    &:hover {
+        box-shadow: 3px 3px 20px $main-color;
+        border: none;
     }
     &_main {
         margin-top: 76px;
         width: 300px;
         height: 50px;
         font-size: 16px;
+        &:hover {
+            box-shadow: 3px 3px 20px $main-color;
+            border: none;
+        }
     }
     &_submit {
         width: 100%;
         height: 55px;
         font-size: 16px;
+        &:hover {
+            box-shadow: 3px 3px 20px $main-color;
+            border: none;
+        }
     }
     &_mini {
         width: 131px;
         height: 40px;
         font-size: 14px;
+        &:hover {
+            box-shadow: 3px 3px 20px $main-color;
+            border: none;
+        }
     }
 }
